--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
           rotate:0deg;
         }
       }
+    @media (max-width: 500px) {
+    .calculator-box {
+        width: 90%;
+        border-radius: 0;
+    }
+}
   </style>
 </head>
 <body>
